# paineldedados

./: .env.example  .gitignore  COMO_RODAR.md  Dockerfile  Makefile  README.md  SOBRE_CI.md  all_models.py  ci.yml  config.py  docker-compose.dev.yml  excel_parser.py  git_commit_push.bat  git_setup_inicial.bat  import_worker.py  imports.py  instalar_dependencias.bat  main.py  pyproject.toml  requirements.txt  rodar_projeto.bat  session.py  streamlit_app.py  v1.py
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/api/routes/: admin.py  auth.py  crud.py  dashboard.py  imports.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/services/: auth.py  excel.py
backend/app/tests/: conftest.py  requirements-test.txt  test_api.py  test_excel.py  test_import_api.py  test_unit_parsers.py
backend/app/workers/: celery_app.py  tasks.py
dashboard/: Dockerfile  streamlit_app.py
data/: generate_sample.py  sample_data.csv
infra/: docker-compose.dev.yml
infra/scripts/: deploy_to_supabase.sh
